@@ -12,6 +12,7 @@ libmp3splt version 0.5.8
 - fixed issue with mp3 frame mode: frame mode is not any more enabled by default
 - fixed mp3 non seekable stdin bug
 - fixed bug with ogg negative granulepos packets
+- both ID3v1 & ID3v2 are now written if the input file contains both
 - small adjustment on the mp3 seekable non frame mode & non seekable frame mode
 - removed unuseful 'frame mode enabled' message for dewrapping & sync error mode
 
